--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         <label for="total">Total:</label>
         <span id="total"></span>
     </div>
+    <script src="index.js"></script>
+
 </body>
 </html>
